Fixed stars not aligning when half filled

--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -27,7 +27,6 @@
 
 .icon-wrap {
     color: gold;
-    margin-top: 0.3rem;
 }
 
 .star-fill {
